objects/ssot__RegulatoryAuthTypeProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Auth Type Product Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryAuthorizationTypeId__c</fullName>
        <label>Regulatory Authorization Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512778347_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryAuthTypeProduct_Regulatory_rel</label>
        <referenceTo>ssot__RegulatoryAuthorizationType__dlm</referenceTo>
        <relationshipLabel>RegulatoryAuthTypeProduct_Regulatory_rel</relationshipLabel>
        <relationshipName>rel_1739512778347_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512790354_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryAuthTypeProduct_ProductId__rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>RegulatoryAuthTypeProduct_ProductId__rel</relationshipLabel>
        <relationshipName>rel_1739512790354_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>